force-app/main/default/objects/Todo__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Todo is completed.</description>
    <inlineHelpText>Todo is completed.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>