force-app/main/default/objects/Todo__c/fields/Created_On__c.field-meta.xml
<CustomField>
    <fullName>Created_On__c</fullName>
    <description>Date the task was created on.</description>
    <inlineHelpText>Date the task was created on.</inlineHelpText>
    <label>Created On</label>
    <type>Date</type>
</CustomField>