force-app/main/default/objects/Todo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A description of what needs to get done.</description>
    <inlineHelpText>A description of what needs to get done.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>